// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProfileViewContainer /> Shallow rendering renders without crashing 1`] = `
<ProfileViewComponent
  getUser={[Function]}
  isProfileOfCurrentUser={true}
  match={
    Object {
      "params": Object {
        "username": "alice",
      },
    }
  }
  onEditSubmitted={[Function]}
  profile={
    Object {
      "$action": 0,
      "$meta": Object {
        "userId": "d4a093ed4e56c8c2411281d829715d9ab552c0bb762065c9ca1d96d3fd07866d",
      },
      "$rev": 1,
      "$scope": "ac431f268fc8044d6baa36eb58eab96d3efd4ef32a354e57fd04f17c52de947c",
      "$scopeId": "yWzpUT3PNNo24Pa2maCMUXdBMBVKGBKkHH",
      "$type": "userProfile",
      "address": "Wonderland",
      "avatarUrl": "https://robohash.org/set_set2/bgset_bg2/ppkQqaIfGqx",
      "name": "Alice",
      "text": "Hey, I'm Alice",
    }
  }
  username="alice"
/>
`;

exports[`<ProfileViewContainer /> Shallow rendering should render user profile that different from current user 1`] = `
<ProfileViewComponent
  getUser={[Function]}
  isProfileOfCurrentUser={false}
  match={
    Object {
      "params": Object {
        "username": "bob",
      },
    }
  }
  onEditSubmitted={[Function]}
  profile={
    Object {
      "$action": 0,
      "$meta": Object {
        "userId": "c56d7036d14071f7c2f16a64ea71fcdd41c90e9f2691de406e1847065267679f",
      },
      "$rev": 1,
      "$scope": "uuuuuf268fc8044d6baa36eb58eab96d3efd4ef32a354e57fd04f17c52de947c",
      "$scopeId": "qwEpUT3PNNo24Pa2maCMUXdBMBVKGBKkHH",
      "$type": "userProfile",
      "address": "Greentown",
      "avatarUrl": "http://robohash.org/set_set3/bgset_bg1/JNth88PrhGDhwp4LNQMt",
      "name": "Bob",
      "text": "Hey, I'm Bob",
    }
  }
  username="bob"
/>
`;
